--- a/src/FC.Codeflix.Catalog.Application/FC.Codeflix.Catalog.Application.csproj
+++ b/src/FC.Codeflix.Catalog.Application/FC.Codeflix.Catalog.Application.csproj
@@ -5,5 +5,9 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
+  
+  <ItemGroup>
+    <ProjectReference Include="..\FC.Codeflix.Catalog.Domain\FC.Codeflix.Catalog.Domain.csproj" />
+  </ItemGroup>
 
 </Project>
